# gg

./: CMakeLists.txt  readme.md
application/: CMakeLists.txt
application/resource/: readme.md
application/resource/cmake/: executable.txt  library.txt
application/source/: entry_point.cpp  form.cpp
application/source/actions/: actions.cpp  actions.hpp
application/source/command_runner/: command_runner.cpp  command_runner.hpp
application/source/logger/: logger.cpp  logger.hpp
installer/: CMakeLists.txt
installer/source/: entry_point.cpp  form.cpp
shared/: CMakeLists.txt
shared/include/: shared.hpp
shared/source/: shared.cpp
